--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <p>
       All work is booked through a short quote form. Submit your idea, placement,
       size, and any reference material. You’ll receive a response with pricing,
-      availability, and next steps.
+      availability, and next steps. We can beat commercial prices.
     </p>
     <a href="mailto:xenoglyph.net@gmail.com" class="cta" style="margin-top:1.5rem; display:inline-block;">Go to Quote Form</a>
   </section>
